Centralize all publishing properties.

--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ buildscript {
         maven {
             url "https://maven.pkg.github.com/infinum/android_dbinspector"
             Properties properties = new Properties()
-            def githubProperties = rootProject.file("github.properties")
-            if (githubProperties.exists()) {
-                properties.load(new FileInputStream(githubProperties))
+            def publishProperties = rootProject.file("publish.properties")
+            if (publishProperties.exists()) {
+                properties.load(new FileInputStream(publishProperties))
             } else {
                 properties.setProperty("github.user", "")
                 properties.setProperty("github.token", "")
@@ -50,9 +50,9 @@ allprojects {
         maven {
             url "https://maven.pkg.github.com/infinum/android_dbinspector"
             Properties properties = new Properties()
-            def githubProperties = rootProject.file("github.properties")
-            if (githubProperties.exists()) {
-                properties.load(new FileInputStream(githubProperties))
+            def publishProperties = rootProject.file("publish.properties")
+            if (publishProperties.exists()) {
+                properties.load(new FileInputStream(publishProperties))
             } else {
                 properties.setProperty("github.user", "")
                 properties.setProperty("github.token", "")
@@ -86,9 +86,9 @@ subprojects {
         maven {
             url "https://maven.pkg.github.com/infinum/android_dbinspector"
             Properties properties = new Properties()
-            def githubProperties = rootProject.file("github.properties")
-            if (githubProperties.exists()) {
-                properties.load(new FileInputStream(githubProperties))
+            def publishProperties = rootProject.file("publish.properties")
+            if (publishProperties.exists()) {
+                properties.load(new FileInputStream(publishProperties))
             } else {
                 properties.setProperty("github.user", "")
                 properties.setProperty("github.token", "")
