Add signing of publication.

--- a/dbinspector-no-op/publish.gradle
+++ b/dbinspector-no-op/publish.gradle
@@ -87,6 +87,9 @@ afterEvaluate {
                         dependencyNode.appendNode("version", it.version)
                     }
                 }
+                signing {
+                    sign publishing.publications.release
+                }
             }
         }
     }
