--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':sample', 'dbinspector', 'dbinspector-no-op'
+rootProject.name="DbInspector"
+
+include "dbinspector"
+include "dbinspector-no-op"
+include ":sample"
