Update dependencies to more stable version.

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ allprojects {
                 includeModule("com.soywiz.korlibs.korte", "korte-jvm")
                 includeModule("org.jetbrains.trove4j", "trove4j")
                 includeModule("org.jetbrains.kotlinx", "kotlinx-html-jvm")
+                includeGroup("org.jetbrains.dokka")
+                includeGroup("org.jetbrains")
                 includeGroup("org.koin")
             }
         }
