--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: "com.android.library"
-apply plugin: "kotlin-android"
+plugins {
+    id "com.android.library"
+    id "kotlin-android"
+}
+
 apply from: "protobuf.gradle"
 
 android {
