--- a/dbinspector-no-op/build.gradle
+++ b/dbinspector-no-op/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion buildConfig.minSdk
         targetSdkVersion buildConfig.targetSdk
-        versionCode dbinspector.versionCode
-        versionName dbinspector.version
+        versionCode releaseConfig.versionCode
+        versionName releaseConfig.version
     }
 
     buildTypes {
