--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdkVersion buildConfig.minSdk
         targetSdkVersion buildConfig.targetSdk
-        versionCode dbinspector.versionCode
-        versionName dbinspector.version
+        versionCode releaseConfig.versionCode
+        versionName releaseConfig.version
     }
 
     buildTypes {
