--- a/.github/workflows/experimental.yml
+++ b/.github/workflows/experimental.yml
@@ -15,7 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: JaCoCo
+        run: ./gradlew jacocoTestReport
+      - name: Stop Gradle
+        run: ./gradlew --stop
       - name: Upload to Codecov
         uses: codecov/codecov-action@v1
-        with:
-          verbose: true
