--- a/dbinspector/src/main/AndroidManifest.xml
+++ b/dbinspector/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:enabled="true"
             android:exported="true"
             android:icon="@mipmap/dbinspector_launcher"
-            android:label="@string/dbinspector_name"
+            android:label="@string/dbinspector_launcher_name"
             android:roundIcon="@mipmap/dbinspector_launcher_round"
             android:targetActivity="com.infinum.dbinspector.ui.databases.DatabasesActivity"
             android:taskAffinity="com.infinum.dbinspector"
