--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,6 +17,7 @@ ext.versions = [
         "protobuf_plugin"   : "0.8.14",
         "koin"              : "2.2.2",
         "timber"            : "4.7.1",
+        "fuzzy"             : "1.3.1",
         "detekt"            : "1.15.0",
         "ktlint"            : "9.4.1",
         "cpd"               : "3.1",
@@ -62,6 +63,9 @@ ext.packages = [
         ],
         "timber"     : [
                 "core": "com.jakewharton.timber:timber:${versions.timber}"
+        ],
+        "fuzzy"      : [
+                "core": "me.xdrop:fuzzywuzzy:${versions.fuzzy}"
         ],
         "detekt"     : [
                 "plugin"    : "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:${versions.detekt}",
