Add bounce effect to all RecyclerViews. Update Kotlin to 1.4.31. Use new Kotlin JVM compiler. Update dependencies.

--- a/dbinspector-no-op/build.gradle
+++ b/dbinspector-no-op/build.gradle
@@ -39,6 +39,7 @@ android {
         freeCompilerArgs += [
                 '-Xexplicit-api=strict'
         ]
+        useIR = true
     }
 
     sourceSets.each {
