--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,13 +5,14 @@ ext.versions = [
         "coroutines"        : "1.4.2",
         "core"              : "1.3.2",
         "appcompat"         : "1.2.0",
-        "fragment"          : "1.3.0",
+        "activity"          : "1.2.1",
+        "fragment"          : "1.3.1",
         "viewpager"         : "1.0.0",
-        "paging"            : "3.0.0-beta01",
+        "paging"            : "3.0.0-beta02",
         "recyclerview"      : "1.2.0-beta02",
         "startup"           : "1.0.0",
         "swiperefreshlayout": "1.1.0",
-        "datastore"         : "1.0.0-alpha06",
+        "datastore"         : "1.0.0-alpha08",
         "dynamicanimation"  : "1.0.0",
         "design"            : "1.3.0",
         "protobuf"          : "3.14.0",
@@ -41,6 +42,7 @@ ext.packages = [
         "androidx"   : [
                 "core"              : "androidx.core:core-ktx:${versions.core}",
                 "appcompat"         : "androidx.appcompat:appcompat:${versions.appcompat}",
+                "activity"          : "androidx.activity:activity-ktx:${versions.activity}",
                 "fragment"          : "androidx.fragment:fragment-ktx:${versions.fragment}",
                 "viewpager"         : "androidx.viewpager2:viewpager2:${versions.viewpager}",
                 "recyclerview"      : "androidx.recyclerview:recyclerview:${versions.recyclerview}",
