--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -31,6 +31,10 @@ android {
 
     resourcePrefix "dbinspector_"
 
+    lintOptions {
+        disable 'InvalidFragmentVersionForActivityResult'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -58,6 +62,7 @@ dependencies {
     implementation packages.kotlin.core
     implementation packages.androidx.core
     implementation packages.androidx.appcompat
+    implementation packages.androidx.activity
     implementation packages.androidx.fragment
     implementation packages.androidx.recyclerview
     implementation packages.androidx.viewpager
